2007-10-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c (nautilus_file_get_gicon):
	Handle accept, visited and embedding text state and
	rewrite the icon as needed.
	
        * libnautilus-private/nautilus-icon-info.c:
        (nautilus_icon_info_finalize):
	Fix crash if pixbuf is NULL

2007-10-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/Makefile.am:
        * libnautilus-private/nautilus-icon-info.[ch]:
	Added NautilusInfoInfo, including caches and GIcon => pixbuf lookup
	
        * libnautilus-private/nautilus-file.[ch]:
	Make nautilus_file_get_icon return a NautilusFileInfo
	
        * libnautilus-private/nautilus-icon-canvas-item.[ch]:
	Split out attach points instead of using NautilusAttachPoints
	
        * libnautilus-private/nautilus-icon-container.[ch]:
        * src/file-manager/fm-icon-container.c:
	Use the new nautilus_file_get_icon and nautilus_file_info_* stuff

        * libnautilus-private/nautilus-icon-factory.c:
        * libnautilus-private/nautilus-program-choosing.c:
        * libnautilus-private/nautilus-mime-application-chooser.c:
        * libnautilus-private/nautilus-open-with-dialog.c:
	Update to g_themed_icon_get_names const type
	
2007-10-10  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.[ch]:
	Keep track of GIcon from gio.
	Add nautilus_file_get_icon()
	
        * libnautilus-private/nautilus-icon-factory.[ch]:
	Add nautilus_icon_factory_get_pixbuf_for_gicon().
	This is a bit temporary, but can be used to move over
	users to nautilus_file_get_icon().
	
        * libnautilus-private/nautilus-icon-container.[ch]:
        * src/file-manager/fm-icon-container.c:
	Use nautilus_file_get_icon() in icon view.

2007-10-10  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.c:
        * libnautilus-private/nautilus-monitor.c: