@@ -46,7 +46,7 @@
 	 GNOME_VFS_FILE_INFO_GET_ACCESS_RIGHTS)
 
 #define NAUTILUS_FILE_DEFAULT_ATTRIBUTES				\
-	"std:*,access:*,mountable:*,time:*,unix:*,owner:*,selinux:*"
+	"std:*,access:*,mountable:*,time:*,unix:*,owner:*,selinux:*,thumbnail:*"
 
 /* These are in the typical sort order. Known things come first, then
  * things where we can't know, finally things where we don't yet know.
@@ -100,6 +100,7 @@ struct NautilusFileDetails
 	goffset deep_size;
 
 	GIcon *icon;
+	char *thumbnail_path;
 	
 	GList *mime_list; /* If this is a directory, the list of MIME types in it. */
 	char *top_left_text;
